[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/buttonsSprites/startButton.png" type="Texture" id=1]
[ext_resource path="res://Start.gd" type="Script" id=2]
[ext_resource path="res://menu/buttonsSprites/exitButton.png" type="Texture" id=3]
[ext_resource path="res://menu/menuBackground.png" type="Texture" id=4]
[ext_resource path="res://Quit.gd" type="Script" id=5]
[ext_resource path="res://fonts/MedievalSharp-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 83
font_data = ExtResource( 6 )

[node name="Menu" type="Node2D"]
position = Vector2( 256, 160 )

[node name="Start" type="Button" parent="."]
margin_left = 180.0
margin_top = 192.0
margin_right = 259.0
margin_bottom = 216.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Start"]
position = Vector2( 38, 8 )
scale = Vector2( 0.26, 0.22 )
texture = ExtResource( 1 )

[node name="Quit" type="Button" parent="."]
margin_left = 180.0
margin_top = 278.0
margin_right = 259.0
margin_bottom = 302.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Quit"]
position = Vector2( 40, 12 )
scale = Vector2( 0.009, 0.008 )
texture = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 256, 128 )
scale = Vector2( 0.662, 0.77 )
z_index = -1
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 21.0
margin_top = 47.0
margin_right = 511.0
margin_bottom = 141.0
custom_colors/font_color = Color( 1, 0.87451, 0.027451, 1 )
custom_colors/font_color_shadow = Color( 1, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Math Knights"

[connection signal="mouse_entered" from="Start" to="Start" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="Start" method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Start" to="Start" method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Quit" to="Quit" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="Quit" method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Quit" to="Quit" method="_on_Start_pressed"]
